--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,17 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div>
+            <div id="container">
+                <div class="menu">
+                    <h1 class="menu-header">Music Social Network</h1>
+                    <form action="" method="post" class="search">
+                        <input type="search" name="" placeholder="поиск" class="input" />
+                        <input type="submit" name="" value="" class="submit" />
+                    </form>
+                </div>
+            </div>
+        </div>
 
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
