--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,26 @@
         <div>
             <div id="container">
                 <div class="menu">
-                    <h1 class="menu-header">Music Social Network</h1>
-                    <form action="" method="post" class="search">
-                        <input type="search" name="" placeholder="поиск" class="input" />
-                        <input type="submit" name="" value="" class="submit" />
-                    </form>
+                    <div class="menu-top">
+                        <h2 class="menu-header">Music Social Network</h2>
+
+                        <form action="" method="post" class="search">
+                            <input type="search" name="" placeholder="поиск" class="input" />
+                            <input type="submit" name="" value="" class="submit" />
+                        </form>
+                        <div class="play-lists-block" >
+                            <a class="play-lists-link" href="#">Плейлисты</a>
+                        </div>
+                        <div class="popular-block">
+                            <a class="popular-link" href="#">Популярное</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="favorite-block">
+                            <!--<img src="../src/img/menu/Like.png" alt="my favorite" class="favorite-img">-->
+                            <a href="#" class="favorite-link">Любимые песни</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
