--- a/src/index.html
+++ b/src/index.html
@@ -20,28 +20,44 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div>
-            <div id="container">
-                <div class="menu">
-                    <div class="menu-top">
-                        <h2 class="menu-header">Music Social Network</h2>
+        <div id="main-container">
+            <div class="menu">
+                <div class="menu-top">
+                    <h2 class="menu-header">Music Social Network</h2>
 
-                        <form action="" method="post" class="search">
-                            <input type="search" name="" placeholder="поиск" class="input" />
-                            <input type="submit" name="" value="" class="submit" />
-                        </form>
-                        <div class="play-lists-block" >
-                            <a class="play-lists-link" href="#">Плейлисты</a>
-                        </div>
-                        <div class="popular-block">
-                            <a class="popular-link" href="#">Популярное</a>
-                        </div>
+                    <form action="" method="post" class="search">
+                        <input type="search" name="" placeholder="поиск" class="input" />
+                        <input type="submit" name="" value="" class="submit" />
+                    </form>
+                    <div class="top-menu-block" >
+                        <a class="top-menu-link" href="#">Плейлисты</a>
                     </div>
-                    <div>
-                        <div class="favorite-block">
-                            <!--<img src="../src/img/menu/Like.png" alt="my favorite" class="favorite-img">-->
-                            <a href="#" class="favorite-link">Любимые песни</a>
-                        </div>
+                    <div class="top-menu-block">
+                        <a class="top-menu-link" href="#">Популярное</a>
+                    </div>
+                </div>
+                <div class="menu-bottom">
+                    <button class="menu-bottom-button">Вход/Регистрация</button>
+
+                    <div class="bottom-menu-block">
+                        <!--<img src="../src/img/menu/Like.png" alt="my favorite" class="favorite-img">-->
+                        <a href="#" class="bottom-menu-link">Любимые песни</a>
+                    </div>
+                    <div class="bottom-menu-block">
+                        <!--<img src="../src/img/menu/Like.png" alt="my favorite" class="favorite-img">-->
+                        <a href="#" class="bottom-menu-link">Мои плейлисты</a>
+                    </div>
+                    <div class="bottom-menu-block">
+                        <!--<img src="../src/img/menu/Like.png" alt="my favorite" class="favorite-img">-->
+                        <a href="#" class="bottom-menu-link">Мои альбомы</a>
+                    </div>
+                    <div class="bottom-menu-block">
+                        <!--<img src="../src/img/menu/Like.png" alt="my favorite" class="favorite-img">-->
+                        <a href="#" class="bottom-menu-link">Мои исполнители</a>
+                    </div>
+                    <div class="bottom-menu-block">
+                        <!--<img src="../src/img/menu/Like.png" alt="my favorite" class="favorite-img">-->
+                        <a href="#" class="bottom-menu-link">Моя история</a>
                     </div>
                 </div>
             </div>
