--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                         <input type="submit" name="" value="" class="submit" />
                     </form>
                     <div class="top-menu-block" >
-                        <a class="top-menu-link" href="#">Плейлисты</a>
+                        <a class="top-menu-link" href="Playlist.html">Плейлисты</a>
                     </div>
                     <div class="top-menu-block">
                         <a class="top-menu-link" href="#">Популярное</a>
@@ -38,6 +38,8 @@
                 </div>
                 <div class="menu-bottom">
                     <button class="menu-bottom-button">Вход/Регистрация</button>
+
+                    </div>
 
                     <div class="bottom-menu-block">
                         <!--<img src="../src/img/menu/Like.png" alt="my favorite" class="favorite-img">-->
@@ -59,9 +61,11 @@
                         <!--<img src="../src/img/menu/Like.png" alt="my favorite" class="favorite-img">-->
                         <a href="#" class="bottom-menu-link">Моя история</a>
                     </div>
+
                 </div>
             </div>
         </div>
+            
 
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
@@ -77,5 +81,6 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
+        
     </body>
 </html>
